# Test_code

./: .env  .gitignore  README.md  client_secret.json  gmail_token.json  pyproject.toml  simple_gmail.py  test.ipynb
code/: client_secret.json  gmail_token.json  imap_pop3.ipynb  simple_gmail.py  smtp.ipynb
docker/: .env.dev  Dockerfile  compose.dev.yaml  ticket.Dockerfile  workflows.Dockerfile
docker/config/: rabbitmq.conf
docker/config/logstash/: logstash.conf  logstash.yml
libs/dotnet-api-client/: README.md  pyproject.toml
libs/dotnet-api-client/src/dotnet_api_client/: __init__.py  client.py  constants.py  dtos.py
libs/logger/: README.md  pyproject.toml
libs/logger/src/logger/: __init__.py  contextualize_logger.py  get_logger.py  middleware.py  setup_logger.py
libs/ocr2text/: README.md  pyproject.toml
libs/ocr2text/src/ocr2text/: __init__.py  ocr2text.py
libs/ocr2text/src/ocr2text/assets/img_output/: example_image.json
libs/ocr2text/src/ocr2text/entities/: __init__.py
libs/ocr2text/src/ocr2text/utils/: __init__.py  process_tesseract_results.py
libs/openai_api_client/: README.md  pyproject.toml
libs/openai_api_client/src/openai_api_client/: embedding.py  types.py
libs/openai_api_client/src/openai_api_client/chat/: __init__.py  model.py  settings.py
libs/vectordb/: README.md  pyproject.toml
libs/vectordb/src/vectordb/opensearch/: __init__.py  os_service.py
output/: 198e572acc4c31ff.json  198e572acc4c31ff_attachment_summary.md
src/ticket/core/process/: processing.py
test/code/: test.ipynb  test_gmail_utils.py
test/data/: Test_table.xlsx  allowed_subjects.xlsx
