[project]
name = "test-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.40.19",
    "docling>=2.48.0",
    "dotenv>=0.9.9",
    "dramatiq>=1.18.0",
    "git-filter-repo>=2.47.0",
    "google-api-python-client>=2.179.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "ipykernel>=6.30.1",
    "llama-index==0.12.30",
    "llama-index-agent-openai==0.4.6",
    "llama-index-cli==0.4.1",
    "llama-index-core==0.12.30",
    "llama-index-embeddings-huggingface==0.5.3",
    "llama-index-embeddings-openai==0.3.1",
    "llama-index-indices-managed-llama-cloud==0.6.11",
    "llama-index-llms-openai==0.3.35",
    "llama-index-multi-modal-llms-openai==0.4.3",
    "llama-index-program-openai==0.3.1",
    "llama-index-question-gen-openai==0.3.0",
    "llama-index-readers-file==0.4.7",
    "llama-index-readers-llama-parse==0.4.0",
    "llama-parse==0.6.12",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "opensearch-py>=3.0.0",
    "orjson>=3.11.3",
    "pika>=1.3.2",
    "simplegmail>=4.1.1",
    "structlog>=25.4.0",
]
