[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotnet-api-client"
version = "0.1.0"
description = "API Client for ASP.NET Backend."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "AvePoint", email = "avepoint@avepoint.com" }]
dependencies = [
  # workspace packages
  "logger",
  # 3rd parties
  "httpx>=0.28.1",
  "pydantic>=2.10.6",
]

[tool.uv.sources]
logger = { workspace = true }
