[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "logger"
version = "0.1.0"
description = "Logger for Parrot."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "AvePoint", email = "avepoint@avepoint.com" }]
dependencies = ["orjson>=3.10.15", "structlog>=25.1.0"]

[project.optional-dependencies]
fastapi = ["fastapi>=0.115.8"]
