[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ocr2text"
version = "0.1.0"
description = "A Python project for reading and processing image file using OCR"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "AvePoint", email = "avepoint@avepoint.com" }]

dependencies = [
    "pytesseract>=0.3.13",
    "testresources>=2.0.2",
    "pydantic>=2.10.6",
]

[tool.uv.sources]
logger = { workspace = true }
