[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vectordb"
version = "0.1.0"
description = "Vector DB for Parrot."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "AvePoint", email = "avepoint@avepoint.com" }]
dependencies = [
  # workspace packages
  "logger",
  # 3rd parties
  "pydantic>=2.10.6",
  "pydantic-extra-types[all]>=2.10.2",
]

[project.optional-dependencies]
elasticsearch = ["elasticsearch>=8.17.1", "orjson>=3.10.15"]
milvus = ["pymilvus>=2.5.6,<2.6.0"]

[tool.uv.sources]
logger = { workspace = true }
